Replace AVX2 detection with autoconf-archive/AX_EXT
The hand-rolled build-time AVX2 / AVX512-BW detection and resulting
pre-processor flags that this commit removes suffered from a number of
issues, all of which are addressed:

1. It required separate rules to compile AVX implementations of
   matcher.cpp and simd_*.cpp.
   The practice of assembling a static library with objects built with
   different compile CXXFLAGS is hackish, and not autotools canon; the
   resulting Makefile.am had "exotic" features like special rules
   for four object files

2. The "exotic" setup then required implementation of empty placeholder
   functions like nlcount_avx2(), and matcher_not_compiled_with_avx2()
   to "apease ranlib 'has no symbols'"

3. The resulting complexity seems to have introduced a bug not yet
   discovered in practice:
   A binary built with HAVE_SSE2 defined, but running on a CPU without
   SSE2 caps would likely crash by attempting to run un-gated SSE2
   code in match().
   There is no SSE2 implementation of Matcher::match() or advance(),
   but they are needed for the case of a binary running on a system
   without SSE2

4. The simplistic home-grown test for AVX2 appears to not be portable.
   On my system, a Ubuntu 16 VMware VM on linux 2.6.32 with g++ 9.4.0,
   the "intrinsics" tests fail with "error: cannot convert '__m512i' {aka
   '__vector(8) long long int'} to '__m512' {aka '__vector(16) float'} in
   initialization", any speed benefit of ugrep is locked out.

   Although the host CPU is Ryzen 5900x (AVX2 capable, but not AVX512),
   the virtualization of VMWare doesn't make AVX2 available in the
   guest. It appears to be a limitation of several hypervisors that
   AVX2 is not passed through.

   The codebase seems intended to detect AVX2 capability at run-time,
   so AVX code should always be emitted. The intrinsics tests attempts
   to compile with -march=native, which if I understand correctly,
   would mean that on VMs like mine, this test would a

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,6 @@
 noinst_LIBRARIES      = libreflex.a
-libreflex_a_CPPFLAGS  = -I$(top_srcdir)/include $(SIMD_FLAGS) -DWITH_NO_INDENT -DWITH_NO_CODEGEN
+libreflex_a_CPPFLAGS  = -include $(CONFIG_HEADER) -I$(top_srcdir)/include -DWITH_NO_INDENT -DWITH_NO_CODEGEN
+libreflex_a_CXXFLAGS  = $(SIMD_FLAGS)
 libreflex_a_SOURCES   = \
         convert.cpp \
         debug.cpp \
@@ -15,13 +16,17 @@ libreflex_a_SOURCES   = \
         letter_scripts.cpp \
         composer.cpp
 
-# separately compile matcher_avx2.cpp and matcher_avx512bw (with the same content as matcher.cpp) with AVX optimizations enabled
-libreflex_a-matcher_avx2.$(OBJEXT)     : CXXFLAGS += $(SIMD_AVX2_FLAGS)
-libreflex_a-matcher_avx512bw.$(OBJEXT) : CXXFLAGS += $(SIMD_AVX512BW_FLAGS)
+if ENABLE_AVX2
+    libreflex_a_SOURCES   += \
+        matcher_avx2.cpp \
+        simd_avx2.cpp
+endif
+if ENABLE_AVX512_BW
+    libreflex_a_SOURCES   += \
+        matcher_avx512bw.cpp \
+        simd_avx512bw.cpp
+endif
 
-# separately compile simd_avx2.cpp and simd_avx512bw.cpp with AVX optimizations enabled
-libreflex_a-simd_avx2.$(OBJEXT)     : CXXFLAGS += $(SIMD_AVX2_FLAGS)
-libreflex_a-simd_avx512bw.$(OBJEXT) : CXXFLAGS += $(SIMD_AVX512BW_FLAGS)
 # Tell automake to package these into the tarball
 # FIXME: move these files to this directory, they belong with the source code.
 # FIXME: Include them with "quotes", not angle <brackets>
