Make CPU feature detection scalable, detect SSE2
With an eye on allowing CPU-specific optimizations to be added
in the future, and on making the produced binary portable to all
CPUs of the target instruction set, this commit refactors the HW
variables that stores CPU capabilities, and the way it's accessed.

The uint64_t variable HW is replaced with a const bitfield (struct
SIMD_caps).

The have_HW_*() accessor functions are removed.
The detection of known features is moved from accessors to the get_HW()
function, and the hardcoded bit positions (62, 37), which require
significant effort to decode by a human examining the code, are replaced
with a more clear and easier to read representation.

Removed this:
inline bool have_HW_AVX2()
{
  return HW & (1ULL << 37);
}

Replaced with this:
  caps.avx2      = !!(CPUInfo7[1] & bit_AVX2);     /* ebx_cpuid7,5 */

Additionally, detection for SSE2 is added in the same fashion as
AVX2/AVX512_BW.

A future commit will add NEON detection into the same detection
framework (bitfield struct computed at startup)

Implement Matcher::simd_match_sse2()

Without this function, a binary built with extensions had no way to
access non-SSE2 code. If running on a CPU not capable of SSE2, it would
just attempt to run SSE2 code and (probably) crash.

Fixes Genivia/ugrep#368

Changed ax_ext.m4 so it defines implementation FLAGS settings
SIMD_FLAGS_SSE2, SIMD_FLAGS_AVX2, etc, and also application FLAGS
settings (SIMD_FLAGS)

The implementation flags will be used to build libraries like
libreflex-sse2.a, libreflexx-avx2.a. etc which contain the respective
logic implementation using intrinsics. They are only built when the
compiler supports the respective instruction set and the corresponding
HAVE_{SSE2,AVX2...} define is set, such that libreflex-sse2.a is built
only with -msse2 and not with other flags, and similarly the -avx.a
counterpart is only built with -mavx2 and not other flags.

GCC manual states:

   These options enable GCC to use these

--- a/configure.ac
+++ b/configure.ac
@@ -262,7 +262,7 @@ AC_ARG_ENABLE(sse2,
                   [disable SSE2 and AVX optimizations])],
   [with_no_sse2="yes"],
   [with_no_sse2="no"])
-AM_CONDITIONAL([ENABLE_SIMD],[test "x$with_no_sse2" = "xyes"])
+AM_CONDITIONAL([ENABLE_SIMD],[test "x$with_no_sse2" = "xno"])
 if ! test "x$with_no_sse2" = "xyes"; then
   # Cross-compiling must be set to allow compiler detection of -mavx2 and
   # -mavx512bw support without probing the build machine's CPU. The build
@@ -280,8 +280,7 @@ if ! test "x$with_no_sse2" = "xyes"; then
   # Tell AX_EXT that the CPU supports it, because runtime will check.
   ax_cv_have_avx2_cpu_ext=yes
   ax_cv_have_avx512bw_cpu_ext=yes
-  # FIXME: Implement simd_advance_sse2() then uncomment the following, to define HAVE_SSE2:
-  # ax_cv_have_sse2_cpu_ext=no
+  ax_cv_have_sse2_cpu_ext=yes
 
   # FIXME: Tell AX_EXT that the OS supports it. I don't think this is correct for
   # the general case, but it will work for all OS's I know of.
@@ -293,14 +292,14 @@ if ! test "x$with_no_sse2" = "xyes"; then
   # for sample implementation
   ax_cv_have_avx2_ext=yes
   ax_cv_have_avx512bw_ext=yes
-  # FIXME: Implement simd_advance_sse2() then uncomment the following, to define HAVE_SSE2:
-  # ax_cv_have_sse2_ext=no
+  ax_cv_have_sse2_ext=yes
 
   AX_EXT
   cross_compiling=$save_cross_compiling
 fi
-AM_CONDITIONAL([ENABLE_AVX2],[test "x$ax_cv_have_avx2_ext" = "xyes"])
-AM_CONDITIONAL([ENABLE_AVX512_BW],[test "x$ax_cv_have_avx512bw_ext" = "xyes"])
+AM_CONDITIONAL([ENABLE_SSE2],[test "x$ax_cv_support_sse2_ext" = "xyes"])
+AM_CONDITIONAL([ENABLE_AVX2],[test "x$ax_cv_support_avx2_ext" = "xyes"])
+AM_CONDITIONAL([ENABLE_AVX512_BW],[test "x$ax_cv_support_avx512bw_ext" = "xyes"])
 
 if test "x$SIMD_FLAGS" = "x"; then
 AC_ARG_ENABLE(neon,
@@ -347,10 +346,6 @@ else
   SIMD_FLAGS=
 fi
 fi
-
-AC_SUBST(SIMD_FLAGS)
-AC_SUBST(SIMD_AVX2_FLAGS)
-AC_SUBST(SIMD_AVX512BW_FLAGS)
 
 AC_SUBST([PTHREAD_CFLAGS], [""])
 AC_SUBST([PTHREAD_LIBS], ["-lpthread"])
